[package]
name = "supplicant"
version = "0.0.1"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
description = "Bindings for wpa_supplicant"
repository = "https://github.com/jmagnuson/supplicant-rs"
documentation = "https://docs.rs/supplicant"
readme = "README.md"
categories = ["api-bindings", "asynchronous", "network-programming", "os::unix-apis"]
keywords = ["wpa_supplicant", "dbus", "wifi", "networking", "tokio"]
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"], optional = true }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
zbus = { version = "3.7", default-features = false, features = ["tokio"] }
zvariant = { version = "3" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
macaddr = "1"

